# md-converter

./: .pre-commit-config.yaml  CONFIG.md  KNOWN_ISSUES.md  README.md  config.toml  devserver.sh  main.py  pyproject.toml  requirements.txt
.idx/: dev.nix
docs/: WBS.md
src/: main.py
src/api/: app.py  dependencies.py
src/api/routers/: __init__.py  convert.py  health.py  jobs.py
src/api/routes/: config.py  datasets.py  files.py  health.py  processing.py
src/api/utils/: __init__.py  executors.py
src/core/: app.py  config.py  settings.py
src/core/constraint/: __init__.py
src/core/markdown_converter/: __init__.py  config.py  core.py  detection.py  jobs.py  logging.py  models.py
src/core/markdown_converter/adapters/: txt.py
src/core/markdown_converter/cli/: __init__.py
src/core/markdown_converter/jobs/: __init__.py  manager.py  models.py
src/markdown_converter/: api.py  config.py  core.py  utils.py
src/markdown_converter/adapters/: __init__.py  base.py  docx.py  eml.py  html.py  pdf.py  pptx.py  xlsx.py
src/models/: schemas.py
tests/: test_detection.py  test_jobs.py  test_service.py  test_utils.py
